<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MegaCode!</string>

    <string name="perfil">Perfil</string>
    <string name="progreso">Progreso</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="jugar">Jugar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edad">edad</string>
    <string name="nombre">nombre</string>
    <string name="sexo">sexo</string>
    <string name="opcion_no_implementada">Opcion no implementada todavía</string>
    <string name="estudiante">Estudiante</string>
    <string name="anios">Años</string>
    <string name="seleccionar_fotografia">Seleccionar Fotografia</string>
    <string name="seleccionar_personaje">Selecciona un personaje</string>
    <string name="megacode">MegaCode</string>
    <string name="she_megacode">She-MegaCode</string>
    <string name="Nombre">Nombre*</string>
    <string name="Edad">Edad*</string>
    <string name="Sexo">Sexo*</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="email">Email*</string>
    <string name="requerido">Requerido*</string>
    <string name="contrasena">Contraseña*</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrasena">Confirmar Contraseña*</string>
    <string name="login">Login</string>
    <string name="texto_registro">¿No tienes cuenta? Registrate</string>
    <string name="persona">persona</string>
    <string name="noticias">Noticias</string>

    <string-array name="sexos">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
</resources>
