<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar_register"
            style="?android:progressBarStyleHorizontal"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/login_layout_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context="com.megacode.views.activities.RegisterActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/megacode_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lobster_regular"
                    app:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:text="@string/megacode"
                    app:helperText="@string/requerido"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-50dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@id/megacode_title"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/megacode"
                    android:scaleType="centerInside"
                    android:src="@drawable/megacode" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:helperText="@string/requerido"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_text_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:passwordToggleEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_text_contrasena"
                    android:inputType="textPassword"
                    android:hint="@string/contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:passwordToggleEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_text_contrasena2"
                    android:inputType="textPassword"
                    android:hint="@string/confirmar_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/button_registrarse"
                android:text="@string/registrarse"/>
        </LinearLayout>
    </RelativeLayout>


</ScrollView>